# egnite_client

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  clang_format.xml  egnite.qmlproject
apps/: CMakeLists.txt
apps/api/resources/clients/: egnite_client.xml
apps/api/resources/models/: resend_activation_email_request.xml
apps/api/schema/: api.xml  client.xml  model.xml
apps/api/src/: CMakeLists.txt
apps/controls/qml/AnimatedPagesView/: AnimatedHideableItem.qml  AnimatedPagesView.qml
apps/controls/qml/Globals/: Fonts.qml
apps/controls/qml/NavigationBar/: NavigationBar.qml  NavigationItem.qml
apps/controls/qml/Pages/: LoginPage.qml  SignUpPage.qml
apps/controls/src/: CMakeLists.txt
apps/editor/qml/: MainPage.qml  MainWindow.qml
apps/editor/src/: CMakeLists.txt  main.cpp
apps/flow/src/: CMakeLists.txt  main.cpp
apps/schema/resources/: example_api.xml  example_client.xml
apps/schema/src/: CMakeLists.txt
apps/sniffer/: sniffer.qmlproject
apps/sniffer/qml/: AuthPage.qml  Main.qml  MainPage.qml  MainStack.qml  MainWindow.qml
apps/sniffer/qml/Auth/: Authentication.qml  LoginPage.qml  SignUpPage.qml
apps/sniffer/qml/Framework/: PagesView.qml
apps/sniffer/qml/Pages/: WelcomePage.qml
apps/sniffer/resources/qml/: Main.qml
apps/sniffer/src/: CMakeLists.txt  main.cpp
apps/viewer/: viewer.qmlproject
apps/viewer/qml/: AuthPage.qml  Main.qml  MainMenu.qml  MainPage.qml  MainWindow.qml
apps/viewer/qml/Auth/: Authentication.qml  LoginPage.qml
apps/viewer/qml/Framework/: AnimatedHideableItem.qml  AnimatedPagesView.qml
apps/viewer/qml/Pages/: WelcomePage.qml
apps/viewer/resources/: qtquickcontrols2.conf
apps/viewer/resources/qml/: LoginPage.qml  Main.qml
apps/viewer/schema/: api.xml  client.xml
apps/viewer/src/: CMakeLists.txt  main.cpp
cmake/: config.cmake  (+2 more)
imports/egnite/src/: CMakeLists.txt
imports/src/egnite/auth/: CMakeLists.txt  authenticator.cpp  jwt_authenticator.cpp  jwt_authenticator_reply.cpp  reply_factory.cpp
imports/src/egnite/rest/: CMakeLists.txt  api.cpp  client.cpp  pagination.cpp  reply.cpp  reply_decorator.cpp  reply_factory.cpp  utils.cpp
modules/: CMakeLists.txt
modules/egnite/include/egnite/: config.h.in  export.h  quick_egnite.h  quick_plugin.h
modules/egnite/src/: CMakeLists.txt  quick_egnite.cpp  quick_plugin.cpp
modules/egnite/src/archive/: json.cpp
modules/egnite/src/cmd/: parser.cpp
modules/egnite/src/rest/: authenticator.cpp  client.cpp  headers.cpp  messages.cpp  reply.cpp  rest_api.cpp  rest_auth.cpp  rest_client.cpp  rest_reply.cpp  rest_serializer.cpp  serializer.cpp
modules/egnite/tests/: CMakeLists.txt  binder_test.cpp  binder_test.h  main.cpp
modules/egnite/tests/rest/: rest_data_serializer_test.cpp  rest_data_serializer_test.h  test_headers.cpp  test_headers.h  test_serializer.cpp  test_serializer.h
modules/egnite/tests/serializer/: json_archive_test.cpp  json_archive_test.h
modules/egnite/tests/utils/: binder_test.cpp  binder_test.h
modules/include/egnite/: config.h  config.h.in
modules/include/egnite/auth/: authenticator.h  export.h  jwt_authenticator.h  reply.h  reply_factory.h
modules/include/egnite/cmd/: export.h  parser.h
modules/include/egnite/core/: export.h
modules/include/egnite/rest/: api.h  client.h  data_serializer.h  export.h  generic_reply.h  global.h  logger_reply.h  pagination.h  raw_reply.h  reply.h  reply_decorator.h  reply_decorator_factory.h  reply_decorator_manager.h  reply_factory.h  request_builder.h  wrapped_reply.h
modules/include/egnite/serializer/: cbor_archive.h  export.h  json_archive.h  qt_serializer.h
modules/src/egnite/: CMakeLists.txt
modules/src/egnite/auth/: CMakeLists.txt  authenticator.cpp  jwt_authenticator.cpp  reply.cpp  reply_factory.cpp
modules/src/egnite/cmd/: CMakeLists.txt  parser.cpp
modules/src/egnite/core/: CMakeLists.txt
modules/src/egnite/flow/: CMakeLists.txt
modules/src/egnite/qml/: CMakeLists.txt
modules/src/egnite/rest/: CMakeLists.txt  api.cpp  client.cpp  data_serializer.cpp  global.cpp  pagination.cpp  raw_reply.cpp  reply.cpp  reply_decorator.cpp  reply_decorator_factory.cpp  reply_decorator_manager.cpp  reply_factory.cpp  request_builder.cpp  wrapped_reply.cpp
modules/src/egnite/serializer/: CMakeLists.txt  cbor_archive.cpp  json_archive.cpp
modules/tests/: CMakeLists.txt
modules/tests/core/: CMakeLists.txt  binder_test.cpp
modules/tests/rest/: CMakeLists.txt  rest_data_serializer_test.cpp  rest_data_serializer_test.h
src/egnite/: CMakeLists.txt
src/egnite/app/: CMakeLists.txt  main.cpp
src/egnite/egnite/: CMakeLists.txt  quick_egnite.cpp  quick_plugin.cpp
src/egnite/egnite/web/: authenticator.cpp  client.cpp  headers.cpp  messages.cpp  reply.cpp  serializer.cpp  web_authenticator.cpp  web_authorizator.cpp  web_client.cpp  web_headers.cpp  web_serializer.cpp
src/egnite/lib/: CMakeLists.txt
src/egnite/sniffer/: CMakeLists.txt  main.cpp
src/egnite/utils/: CMakeLists.txt
src/egnite/utils/boost_archive/: CMakeLists.txt  json_archive.cpp
src/egnite/utils/boost_serializer/: CMakeLists.txt
src/egnite/utils/cmd/: CMakeLists.txt  parser.cpp
src/egnite/utils/command_line/: CMakeLists.txt  command_line_parser.cpp
src/egnite/utils/json_archive/: CMakeLists.txt  json_archive.cpp
src/egnite/utils/qt_boost_serializer/: CMakeLists.txt
src/egnite/viewer/: CMakeLists.txt  main.cpp
tests/egnite/: CMakeLists.txt  main.cpp  test_web_serializer.cpp
tests/egnite/web/: test_headers.cpp  test_headers.h  test_serializer.cpp  test_serializer.h
tools/: CMakeLists.txt
tools/code_generator/: setup.py
tools/code_generator/code_generator/: __init__.py  code_generator.py  constructs.py  generator.py  utils.py  writer.py
tools/rest_generator/: CMakeLists.txt  main.py
tools/schema_converter/: CMakeLists.txt  cli.py  setup.py
tools/schema_converter/schema_converter/: __init__.py  __main__.py  generator.py  interface_generator.py  reader.py  schema.py
tools/schema_converter/schema_converter/generator/: __init__.py  generator.py  qml_generator.py  qt_generator.py  utils.py
(+194 files in other folders)
