# ----------------------------------------------------------------------- #
# -------------------- Set CMake version and project -------------------- #
# ----------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
project(
  EGNITE
  VERSION 0.1.0
  LANGUAGES CXX)
# ----------------------------------------------------------------------- #
# ---------------------- Include config and macros ---------------------- #
# ----------------------------------------------------------------------- #
include(${EGNITE_SOURCE_DIR}/cmake/config.cmake)
include(${EGNITE_SOURCE_DIR}/cmake/macros.cmake)
# ----------------------------------------------------------------------- #
# -------------------------- Add subdirectories ------------------------- #
# ----------------------------------------------------------------------- #
add_subdirectory(deps)

add_subdirectory(modules)
add_subdirectory(imports)
add_subdirectory(apps)

add_subdirectory(docs)
# ----------------------------------------------------------------------- #
# ---------------------------- Export targets --------------------------- #
# ----------------------------------------------------------------------- #
egnite_export_modules()
# ----------------------------------------------------------------------- #
