# ----------------------------------------------------------------------- #
# -------------------------- Set CMake Version -------------------------- #
# ----------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# ----------------------------------------------------------------------- #
# -------------------------- Add subdirectories ------------------------- #
# ----------------------------------------------------------------------- #
add_subdirectory(api/src)
add_subdirectory(sniffer/src)
add_subdirectory(viewer/src)
# ----------------------------------------------------------------------- #
