# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Generate headers ------------------------------------------ #
# -------------------------------------------------------------------------------------------------- #
set(include_root ${EGNITE_SOURCE_DIR}/include/egnite)

configure_file(
        ${include_root}/config.h.in
        ${include_root}/config.h)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Add subdirectories ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
add_subdirectory(lib)
add_subdirectory(plugins)
add_subdirectory(app)
# -------------------------------------------------------------------------------------------------- #
