# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# --------------------------- Generate headers and set files variable ------------------------------ #
# -------------------------------------------------------------------------------------------------- #
set(source_root ${EGNITE_SOURCE_DIR}/tests/egnite)
set(include_root ${EGNITE_SOURCE_DIR}/tests/egnite)

set(sources
    ${source_root}/main.cpp
    ${source_root}/test_web_serializer.cpp)

set(includes
    ${include_root}/test_web_serializer.h)
# -------------------------------------------------------------------------------------------------- #
# ----------------------------------- Find external libraries -------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
find_package(GTest REQUIRED)
# -------------------------------------------------------------------------------------------------- #
# ----------------------------------- Create engine core test -------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
egnite_add_test(egnite_test
        SOURCES ${sources} ${includes}
        DEPENDS
        GTest::gtest
        GTest::gmock
        egnite::egnite)
# -------------------------------------------------------------------------------------------------- #
