# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# --------------------------- Generate headers and set files variable ------------------------------ #
# -------------------------------------------------------------------------------------------------- #
set(source_root ${EGNITE_SOURCE_DIR}/tests/egnite)
set(include_root ${EGNITE_SOURCE_DIR}/tests/egnite)

set(sources
    ${source_root}/main.cpp

    ${source_root}/web/test_serializer.cpp
    ${source_root}/web/test_headers.cpp)

set(includes
    ${include_root}/web/test_serializer.h
    ${include_root}/web/test_headers.h)
# -------------------------------------------------------------------------------------------------- #
# ----------------------------------- Find external libraries -------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
find_package(GTest REQUIRED)
# -------------------------------------------------------------------------------------------------- #
# ----------------------------------- Create engine core test -------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
egnite_add_test(egnite_test
        SOURCES ${sources} ${includes}
        DEPENDS
        GTest::gtest
        GTest::gmock
        egnite::egnite)
# -------------------------------------------------------------------------------------------------- #
